_includes/styles.scss
$baseurl: '{{ site.baseurl }}';
$grey-color: #828282;

@import 'tufte';
// @import 'syntax-highlighting';

main {
  margin-top: 20px;
}

amp-img {
  background-color: grey;
}

article {
  padding: 2.5rem 0;
}

header {
  margin-top: 20px;
}

.post-meta {
  margin-top: 10px;
}

@media (max-width: 850px) {
  pre {
    width: 90%;
    padding: 0;
  }
}

